language-server/src/tests/snapshots/gleam_language_server__tests__action__unqualified_to_qualified_import_variable_shadowing.snap
---
source: language-server/src/tests/action.rs
expression: "\n\nimport wibble.{wobble}\n\npub fn example() {\n  echo wobble\n\n  let wobble = 1\n\n  echo wobble\n\n  let _ = fn(wobble) {\n    echo wobble\n  }\n\n  todo\n}\n"
---
----- BEFORE ACTION


import wibble.{wobble}

pub fn example() {
  echo wobble
       ▔▔▔↑  

  let wobble = 1

  echo wobble

  let _ = fn(wobble) {
    echo wobble
  }

  todo
}


----- AFTER ACTION


import wibble.{}

pub fn example() {
  echo wibble.wobble

  let wobble = 1

  echo wobble

  let _ = fn(wobble) {
    echo wobble
  }

  todo
}
