language-server/src/tests/snapshots/gleam_language_server__tests__action__unwrap_anonymous_function_with_comment_on_head_line.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  fn(a) { // look out!\n    op(a)\n  }\n}\n\nfn op(a) {\n  todo\n}\n"
---
----- BEFORE ACTION
pub fn main() {
  fn(a) { // look out!
  ↑                   
    op(a)
  }
}

fn op(a) {
  todo
}


----- AFTER ACTION
pub fn main() {
  // look out!
    op
}

fn op(a) {
  todo
}
