language-server/src/tests/snapshots/gleam_language_server__tests__action__unwrap_anonymous_function_with_labelled_and_unlabelled_args.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  fn(a, b, c) { op(a, second: b, third: c) }\n}\n\nfn op(a, second b, third c) {\n  todo\n}\n"
---
----- BEFORE ACTION
pub fn main() {
  fn(a, b, c) { op(a, second: b, third: c) }
  ↑                                         
}

fn op(a, second b, third c) {
  todo
}


----- AFTER ACTION
pub fn main() {
  op
}

fn op(a, second b, third c) {
  todo
}
