language-server/src/tests/snapshots/gleam_language_server__tests__action__unwrap_anonymous_function_with_labelled_args.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  fn(a, b) { op(first: a, second: b) }\n}\n\nfn op(first a, second b) {\n  todo\n}\n"
---
----- BEFORE ACTION
pub fn main() {
  fn(a, b) { op(first: a, second: b) }
  ↑                                   
}

fn op(first a, second b) {
  todo
}


----- AFTER ACTION
pub fn main() {
  op
}

fn op(first a, second b) {
  todo
}
